Fixed snippet header-text selection visibility on Firefox.

--- a/djangoproject/scss/_style.scss
+++ b/djangoproject/scss/_style.scss
@@ -3237,4 +3237,7 @@ ul.corporate-members li {
             margin-right: 10px;
         }
     }
+    .caption-text::selection{
+        background: $green-light;
+    }
 }
